Switch to Vertx gRPC Server (even though no server is used)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 quarkus.banner.enabled=false
 quarkus.grpc.dev-mode.force-server-start=false
+quarkus.grpc.server.use-separate-server=false
 
 quarkus.grpc.clients.test.host=localhost
